libycp/testsuite/tests/Lookup.err
Parsed:
----------------------------------------------------------------------
{
  map `node1 = $[1:"Austria", 2:"Belgium"];
  map `node2 = $[3:"China", 4:"D-Nation"];
  map `node3 = $[5:"England", 6:"France"];
  map `node4 = $[9:node2, 10:node3];
  map `node5 = $[8:node1, 11:node4];
  map `node6 = $[7:"Greece"];
  map `node7 = $[12:node5, 13:node6];
  return lookup (node7, 12, nil);
}
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
{
  map `node1 = $[1:"Austria", 2:"Belgium"];
  map `node2 = $[3:"China", 4:"D-Nation"];
  map `node3 = $[5:"England", 6:"France"];
  map `node4 = $[9:node2, 10:node3];
  map `node5 = $[8:node1, 11:node4];
  map `node6 = $[7:"Greece"];
  map `node7 = $[12:node5, 13:node6];
  return node5;
}
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
{
  map `node1 = $[1:"Austria", 2:"Belgium"];
  map `node2 = $[3:"China", 4:"D-Nation"];
  map `node3 = $[5:"England", 6:"France"];
  map `node4 = $[9:node2, 10:node3];
  map `node5 = $[8:node1, 11:node4];
  map `node6 = $[7:"Greece"];
  map `node7 = $[12:node5, 13:node6];
  return (lookup (node7, 14, nil) == nil);
}
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
{
  map `node1 = $[1:"Austria", 2:"Belgium"];
  map `node2 = $[3:"China", 4:"D-Nation"];
  map `node3 = $[5:"England", 6:"France"];
  map `node4 = $[9:node2, 10:node3];
  map `node5 = $[8:node1, 11:node4];
  map `node6 = $[7:"Greece"];
  map `node7 = $[12:node5, 13:node6];
  return (lookup (node7, 9, nil) == nil);
}
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
{
  return lookup (nil, "hihi", "huhu");
}
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
{
  return haskey (nil, "huhu");
}
----------------------------------------------------------------------
[Scanner] tests/Lookup.ycp:88 Syntax error: must be lookup (<map>, <key>, <default>)
