libycp/testsuite/tests/Lookup.ycp

# ---------------------------------------------------------
#
#  Filename:    Lookup.ycp
#
#  Purpose:     test cases for YCP 'lookup'
#
#  Creator:     jd@suse.de
#
#  Maintainer:  jd@suse.de
#
# ---------------------------------------------------------

// In map m looks up the value matching to given key k.
// Returns nil if the key was not found.

{
     map   node1 = $[ 1: "Austria", 2: "Belgium" ];
     map   node2 = $[ 3: "China", 4: "D-Nation" ];
     map   node3 = $[ 5: "England", 6: "France" ];
     map   node4 = $[ 9: node2, 10: node3 ];
     map   node5 = $[ 8: node1, 11: node4 ];
     map   node6 = $[ 7: "Greece" ];
     map   node7 = $[ 12: node5, 13: node6 ];

//   "libycp[6] Equality on maps not yet implemented"

     return( lookup( node7, 12, nil ) );
}

{
     map   node1 = $[ 1: "Austria", 2: "Belgium" ];
     map   node2 = $[ 3: "China", 4: "D-Nation" ];
     map   node3 = $[ 5: "England", 6: "France" ];
     map   node4 = $[ 9: node2, 10: node3 ];
     map   node5 = $[ 8: node1, 11: node4 ];
     map   node6 = $[ 7: "Greece" ];
     map   node7 = $[ 12: node5, 13: node6 ];

//   "libycp[6] Equality on maps not yet implemented"

     return(  node5 );
}

{
     map   node1 = $[ 1: "Austria", 2: "Belgium" ];
     map   node2 = $[ 3: "China", 4: "D-Nation" ];
     map   node3 = $[ 5: "England", 6: "France" ];
     map   node4 = $[ 9: node2, 10: node3 ];
     map   node5 = $[ 8: node1, 11: node4 ];
     map   node6 = $[ 7: "Greece" ];
     map   node7 = $[ 12: node5, 13: node6 ];

//   "libycp[6] Equality on maps not yet implemented"

     return( lookup( node7, 14, nil ) == nil );
}

{
     map   node1 = $[ 1: "Austria", 2: "Belgium" ];
     map   node2 = $[ 3: "China", 4: "D-Nation" ];
     map   node3 = $[ 5: "England", 6: "France" ];
     map   node4 = $[ 9: node2, 10: node3 ];
     map   node5 = $[ 8: node1, 11: node4 ];
     map   node6 = $[ 7: "Greece" ];
     map   node7 = $[ 12: node5, 13: node6 ];

//   "libycp[6] Equality on maps not yet implemented"

     return( lookup( node7, 9, nil ) == nil );
}

{
    // this must return "huhu"
    return lookup (nil, "hihi", "huhu");
}

{
    // this must return false
    return haskey (nil, "huhu");
}

{
     map   node1 = $[ 1: "Austria", 2: "Belgium" ];

//   Syntax error, <default> missing

     return( lookup( node1, 2 ) == nil );
}
